--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+*.sqlite
 
 # Flask stuff:
 instance/
@@ -217,5 +218,9 @@ modules.xml
 
 # Sonarlint plugin
 .idea/sonarlint
+
+# migrations folder
+migrations
+migrations/*
 
 # End of https://www.gitignore.io/api/flask,pycharm+all
